adding images and labeling to the main page

--- a/index.html
+++ b/index.html
@@ -100,6 +100,42 @@
   </div>
 </section>
 
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img id="teaser" src="./assets/4D_scene.png.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: 100%; width: 100%; object-fit: cover;">
+      <h2 class="subtitle has-text-centered">
+        Coverage optimization on dynamic actors with flying cameras in an occlusion-aware and obstacle-clustered environment where camera extrinsic positions across robots are negotiated
+      </h2>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-light is-big">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-multiline is-centered">
+        <div class="column is-one-third has-text-centered">
+          <img id="shelves" src="./assets/need/multi-actor-indoor-motioncapture.png" alt="indoor motion capture" style="height: 150%; width: 100%; object-fit: cover;">
+          <p>Motion Capture of multi-actor scenes for virtual production</p>
+        </div>
+        <div class="column is-one-third has-text-centered">
+          <img id="binpick" src="./assets/need/cyclist-motion-capture.jpg" alt="Cyclist" style="height: 150%; width: 100%; object-fit: cover;">
+          <p>Outdoor scenes provide long horizon motion capture sequence</p>
+        </div>
+        <div class="column is-one-third has-text-centered">
+          <img id="ten" src="./assets/need/humanoid.jpg" alt="Humanoid" style="height: 150%; width: 100%; object-fit: cover;">
+          <p>Motion capture provides high quality data for humanoid training</p>
+        </div>
+      </div>
+      <h3 class="subtitle has-text-centered">
+        Need for Enhancing Motion Capture Techniques for Outdoor Settings.
+      </h3>
+    </div>
+  </div>
+</section>
+
+
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
