--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img id="teaser" src="./assets/4D_scene.png.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: 100%; width: 100%; object-fit: cover;">
+      <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: 100%; width: 100%; object-fit: cover;">
       <h2 class="subtitle has-text-centered">
         Coverage optimization on dynamic actors with flying cameras in an occlusion-aware and obstacle-clustered environment where camera extrinsic positions across robots are negotiated
       </h2>
@@ -114,7 +114,8 @@
 <section class="hero is-light is-big">
   <div class="hero-body">
     <div class="container">
-      <div class="columns is-multiline is-centered">
+      <!-- Add a new container with a constrained width -->
+      <div class="columns is-multiline is-centered" style="max-width: 80%; margin: 0 auto;">
         <div class="column is-one-third has-text-centered">
           <img id="shelves" src="./assets/need/multi-actor-indoor-motioncapture.png" alt="indoor motion capture" style="height: 150%; width: 100%; object-fit: cover;">
           <p>Motion Capture of multi-actor scenes for virtual production</p>
@@ -134,6 +135,7 @@
     </div>
   </div>
 </section>
+
 
 
 <footer class="footer">
