2nd section update

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </section>
 
 <section class="hero teaser">
-  <div class="container is-max-desktop" style="max-width: 80%; margin: 0 auto;">
+  <div class="container is-max-desktop" style="max-width: 60%; margin: 0 auto;">
     <div class="hero-body">
       <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: auto; width: 100%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
       <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
@@ -115,7 +115,7 @@
   <div class="hero-body">
     <div class="container">
       <!-- Add a new container with a constrained width -->
-      <div class="columns is-multiline is-centered" style="max-width: 80%; margin: 0 auto;">
+      <div class="columns is-multiline is-centered" style="max-width: 70%; margin: 0 auto;">
         <div class="column is-one-third has-text-centered">
           <img id="shelves" src="./assets/need/multi-actor-indoor-motioncapture.png" alt="indoor motion capture" style="height: 120%; width: 100%; object-fit: cover;">
           <p>Motion Capture of multi-actor scenes for virtual production</p>
@@ -129,20 +129,20 @@
           <p>Motion capture provides high quality data for humanoid training</p>
         </div>
       </div>
-      <!-- Move the caption below the columns -->
-      <h3 class="subtitle has-text-centered" style="margin-top: 20px;">
-        Need for Enhancing Motion Capture Techniques for Outdoor Settings.
-      </h3>
+
+      <!-- Add a new div for the h3 caption -->
+      <div class="has-text-centered" style="margin-top: 20px;">
+        <h3 class="subtitle">
+          Need for Enhancing Motion Capture Techniques for Outdoor Settings.
+        </h3>
+      </div>
     </div>
   </div>
 </section>
 
 
 
-<<<<<<< HEAD
 
-=======
->>>>>>> 6c93ef4437ae7c64f1d366d96a0278dd36a32a5e
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
