--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop" style="max-width: 60%; margin: 0 auto;">
     <div class="hero-body">
-      <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: auto; width: 100%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
+      <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: auto; width: 60%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
       <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
         Coverage optimization on dynamic actors with flying cameras in an occlusion-aware and obstacle-clustered environment where camera extrinsic positions across robots are negotiated
       </h2>
@@ -129,14 +129,15 @@
           <p>Motion capture provides high quality data for humanoid training</p>
         </div>
       </div>
-
+    </div>
       <!-- Add a new div for the h3 caption -->
+    <div class="container">
       <div class="has-text-centered" style="margin-top: 20px;">
         <h3 class="subtitle">
           Need for Enhancing Motion Capture Techniques for Outdoor Settings.
         </h3>
       </div>
-    </div>
+    </div>      
   </div>
 </section>
 
