--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop" style="max-width: 80%; margin: 0 auto;">
     <div class="hero-body">
-      <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: auto; width: 60%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
+      <img id="teaser" src="./assets/4D_scene.png" alt="CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments" style="height: auto; width: 80%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
       <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
         Coverage optimization on dynamic actors with flying cameras in an occlusion-aware and obstacle-clustered environment where camera extrinsic positions across robots are negotiated
       </h2>
@@ -141,33 +141,36 @@
 </section>
 
 
-<section class="hero is-big">
+<section class="hero is-light is-big">
   <div class="hero-body">
     <div class="container">
       <!-- Add a new container with a constrained width -->
       <div class="columns is-multiline is-centered" style="max-width: 70%; margin: 0 auto;">
         <div class="column is-one-third has-text-centered">
-          <img id="shelves" src="./assets/need/multi-actor-indoor-motioncapture.png" alt="indoor motion capture" style="height: 120%; width: 100%; object-fit: cover;">
-          <p>Motion Capture of multi-actor scenes for virtual production</p>
+          <img id="shelves" src="./assets/factors/multi-person coverage.jpg" alt="multi-view-capture" style="height: 120%; width: 100%; object-fit: cover;">
+          <p>Multi-view capture</p>
         </div>
         <div class="column is-one-third has-text-centered">
-          <img id="binpick" src="./assets/need/cyclist-motion-capture.jpg" alt="Cyclist" style="height: 120%; width: 100%; object-fit: cover;">
-          <p>Outdoor scenes provide long horizon motion capture sequence</p>
+          <img id="binpick" src="./assets/factors/occlusion-reasoning.png" alt="occlusion-reasoning" style="height: 120%; width: 100%; object-fit: cover;">
+          <p>Occlusion reasoning</p>
         </div>
         <div class="column is-one-third has-text-centered">
-          <img id="ten" src="./assets/need/humanoid.jpg" alt="Humanoid" style="height: 120%; width: 100%; object-fit: cover;">
-          <p>Motion capture provides high quality data for humanoid training</p>
+          <img id="ten" src="./assets/factors/Collision-Avoidance-of-Remotely-Piloted-UAV.png" alt="Collision-Avoidance-of-Remotely-Piloted-UAV" style="height: 120%; width: 100%; object-fit: cover;">
+          <p>Obstacle Avoidance</p>
+        </div>
+        <div class="column is-one-third has-text-centered">
+          <img id="ten" src="./assets/factors/multi-person coverage.jpg" alt="multi-person coverage" style="height: 120%; width: 100%; object-fit: cover;">
+          <p>Multi-person coverage</p>
         </div>
       </div>
-    </div>
-      <!-- Add a new div for the h3 caption -->
-    <div class="container">
+
+      <!-- Add a new container below the columns for the h3 caption -->
       <div class="has-text-centered" style="margin-top: 20px;">
         <h3 class="subtitle">
-          Need for Enhancing Motion Capture Techniques for Outdoor Settings.
+          Key factors in high-quality multi-actor motion capture.
         </h3>
       </div>
-    </div>      
+    </div>
   </div>
 </section>
 
