--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 </section>
 
 
-<section class="hero is-light is-big">
+<section class="hero is-big">
   <div class="hero-body">
     <div class="container">
       <!-- Add a new container with a constrained width -->
       <div class="columns is-multiline is-centered" style="max-width: 70%; margin: 0 auto;">
         <div class="column is-one-third has-text-centered">
-          <img id="shelves" src="./assets/factors/multi-person coverage.jpg" alt="multi-view-capture" style="height: 120%; width: 100%; object-fit: cover;">
+          <img id="shelves" src="./assets/factors/multi-view capture.png" alt="multi-view-capture" style="height: 120%; width: 100%; object-fit: cover;">
           <p>Multi-view capture</p>
         </div>
         <div class="column is-one-third has-text-centered">
@@ -174,6 +174,17 @@
   </div>
 </section>
 
+
+<section class="hero teaser">
+  <div class="container is-max-desktop" style="max-width: 80%; margin: 0 auto;">
+    <div class="hero-body">
+      <img id="teaser" src="./assets/qualitative_comparison.png" alt="Qualitative comparison of different planning methods" style="height: auto; width: 80%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
+      <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
+        Qualitative comparison of different planning methods.
+      </h2>
+    </div>
+  </div>
+</section>
 
 <footer class="footer">
   <div class="container">
