--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
   <div class="hero-body">
     <div class="container">
       <!-- Add a new container with a constrained width -->
-      <div class="columns is-multiline is-centered" style="max-width: 70%; margin: 0 auto;">
-        <div class="column is-one-third has-text-centered">
-          <img id="shelves" src="./assets/factors/multi-view capture.png" alt="multi-view-capture" style="height: 120%; width: 100%; object-fit: cover;">
+      <div class="columns is-multiline is-centered" style="max-width: 100%; margin: 0 auto;">
+        <div class="column is-one-quarter has-text-centered">
+          <img id="shelves" src="./assets/factors/multi-view capture.png" alt="multi-view-capture" style="height: auto; width: 100%; object-fit: contain;">
           <p>Multi-view capture</p>
         </div>
-        <div class="column is-one-third has-text-centered">
-          <img id="binpick" src="./assets/factors/occlusion-reasoning.png" alt="occlusion-reasoning" style="height: 120%; width: 100%; object-fit: cover;">
+        <div class="column is-one-quarter has-text-centered">
+          <img id="binpick" src="./assets/factors/occlusion-reasoning.png" alt="occlusion-reasoning" style="height: auto; width: 100%; object-fit: contain;">
           <p>Occlusion reasoning</p>
         </div>
-        <div class="column is-one-third has-text-centered">
-          <img id="ten" src="./assets/factors/Collision-Avoidance-of-Remotely-Piloted-UAV.png" alt="Collision-Avoidance-of-Remotely-Piloted-UAV" style="height: 120%; width: 100%; object-fit: cover;">
+        <div class="column is-one-quarter has-text-centered">
+          <img id="ten" src="./assets/factors/Collision-Avoidance-of-Remotely-Piloted-UAV.png" alt="Collision-Avoidance-of-Remotely-Piloted-UAV" style="height: auto; width: 100%; object-fit: contain;">
           <p>Obstacle Avoidance</p>
         </div>
-        <div class="column is-one-third has-text-centered">
-          <img id="ten" src="./assets/factors/multi-person coverage.jpg" alt="multi-person coverage" style="height: 120%; width: 100%; object-fit: cover;">
+        <div class="column is-one-quarter has-text-centered">
+          <img id="ten" src="./assets/factors/multi-person coverage.jpg" alt="multi-person coverage" style="height: auto; width: 100%; object-fit: contain;">
           <p>Multi-person coverage</p>
         </div>
       </div>
@@ -175,10 +175,11 @@
 </section>
 
 
-<section class="hero teaser">
-  <div class="container is-max-desktop" style="max-width: 80%; margin: 0 auto;">
+
+<section class="hero teaser is-light">
+  <div class="container is-max-desktop" style="max-width: 100%; margin: 0 auto;">
     <div class="hero-body">
-      <img id="teaser" src="./assets/qualitative_comparison.png" alt="Qualitative comparison of different planning methods" style="height: auto; width: 80%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
+      <img id="teaser" src="./assets/qualitative_comparison.png" alt="Qualitative comparison of different planning methods" style="height: auto; width: 100%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
       <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
         Qualitative comparison of different planning methods.
       </h2>
