--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <!-- Add a new container below the columns for the h3 caption -->
+      <!-- Move the h3 caption outside of the columns container -->
       <div class="has-text-centered" style="margin-top: 20px;">
         <h3 class="subtitle">
           Need for Enhancing Motion Capture Techniques for Outdoor Settings.
