move title on top

--- a/index.html
+++ b/index.html
@@ -114,7 +114,14 @@
 <section class="hero is-light is-big">
   <div class="hero-body">
     <div class="container">
-      <!-- Add a new container with a constrained width -->
+      <!-- Add a new container for the h3 caption at the top -->
+      <div class="has-text-centered" style="margin-bottom: 20px;">
+        <h3 class="subtitle">
+          Need for Enhancing Motion Capture Techniques for Outdoor Settings.
+        </h3>
+      </div>
+
+      <!-- Add a container for the images -->
       <div class="columns is-multiline is-centered" style="max-width: 70%; margin: 0 auto;">
         <div class="column is-one-third has-text-centered">
           <img id="shelves" src="./assets/need/multi-actor-indoor-motioncapture.png" alt="indoor motion capture" style="height: 120%; width: 100%; object-fit: cover;">
@@ -129,16 +136,10 @@
           <p>Motion capture provides high quality data for humanoid training</p>
         </div>
       </div>
-
-      <!-- Move the h3 caption outside of the columns container -->
-      <div class="has-text-centered" style="margin-top: 20px;">
-        <h3 class="subtitle">
-          Need for Enhancing Motion Capture Techniques for Outdoor Settings.
-        </h3>
-      </div>
     </div>
   </div>
 </section>
+
 
 
 <section class="hero is-big">
