--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div>
 </section>
 
-<section class="hero is-light is-big" style="padding-bottom: 50px;">
+<section class="hero is-light is-big" style="padding-bottom: 120px;">
   <div class="hero-body">
     <div class="container">
       <!-- Add a new container for the h3 caption at the top -->
@@ -211,24 +211,24 @@
             <div class="column has-text-centered">
               <p><strong>Corridor</strong></p>
               <!-- 2.5D Map for Corridor -->
-              <img src="./assets/results/corridor_scenario.png" alt="2.5D Map for Corridor" style="height: 250px; width: 250px; margin: 0 auto; object-fit: cover; border: 1px solid #ddd;">
+              <img src="./assets/results/corridor_scenario.png" alt="2.5D Map for Corridor" style="margin: 0 auto; border: 1px solid #ddd;">
               <p>Total actors: <strong>2</strong></p>
               <p>Total horizon: <strong>8</strong></p>
               <p>#Robots: <strong>2</strong></p>
               <!-- Reward Chart for Corridor -->
-              <img src="./assets/results/cooridor_coordinated.png" alt="Reward Chart for Corridor" style="height: 250px; width: 300px; margin: 10px auto; object-fit: cover; border: 1px solid #ddd;">
+              <img src="./assets/results/cooridor_coordinated.png" alt="Reward Chart for Corridor" style="margin: 10px auto; border: 1px solid #ddd;">
             </div>
             
             <!-- Bottleneck Column -->
             <div class="column has-text-centered">
               <p><strong>Bottleneck</strong></p>
               <!-- 2.5D Map for Bottleneck -->
-              <img src="./assets/results/bottleneck_scenario_.png" alt="2.5D Map for Bottleneck" style="height: 250px; width: 250px; margin: 0 auto; object-fit: cover; border: 1px solid #ddd;">
+              <img src="./assets/results/bottleneck_scenario_.png" alt="2.5D Map for Bottleneck" style="margin: 0 auto; border: 1px solid #ddd;">
               <p>Total actors: <strong>4</strong></p>
               <p>Total horizon: <strong>12</strong></p>
               <p>#Robots: <strong>4</strong></p>
               <!-- Reward Chart for Bottleneck -->
-              <img src="./assets/results/bottleneck_coordinated.png" alt="Reward Chart for Bottleneck" style="height: 250px; width: 300px; margin: 10px auto; object-fit: cover; border: 1px solid #ddd;">
+              <img src="./assets/results/bottleneck_coordinated.png" alt="Reward Chart for Bottleneck" style="margin: 10px auto; border: 1px solid #ddd;">
             </div>
           </div>
         </div>
@@ -236,6 +236,7 @@
     </div>
   </div>
 </section>
+
 
 
 <footer class="footer">
