--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   </div>
 </section>
 
-<section class="hero is-light">
+<section class="hero">
   <div class="hero-body">
     <div class="container">
       <h1 class="title has-text-centered">Reward Comparison:</h1>
