--- a/index.html
+++ b/index.html
@@ -182,14 +182,15 @@
 
 <section class="hero teaser is-light">
   <div class="container is-max-desktop" style="max-width: 100%; margin: 0 auto;">
-    <div class="hero-body">
-      <img id="teaser" src="./assets/qualitative_comparison.png" alt="Qualitative comparison of different planning methods" style="height: auto; width: 100%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
-      <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 1em auto;">
+    <div class="hero-body" style="padding-top: 50px;">
+      <h2 class="subtitle has-text-centered" style="max-width: 800px; margin: 0 auto;">
         Qualitative comparison of different planning methods.
       </h2>
+      <img id="teaser" src="./assets/qualitative_comparison.png" alt="Qualitative comparison of different planning methods" style="height: auto; width: 100%; max-width: 800px; object-fit: cover; margin: 0 auto; display: block;">
     </div>
   </div>
 </section>
+
 
 <section class="hero">
   <div class="hero-body">
