--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel = "icon" href = "assets/title_image.png" type = "image/x-icon">
+  <link rel = "icon" href = "assets/factors/multi-view capture.png" type = "image/x-icon">
 
   <meta charset="utf-8">
   <meta name="description"
