--- a/index.html
+++ b/index.html
@@ -111,6 +111,39 @@
   </div>
 </section>
 
+<section class="hero is-small is-light">
+  <div class="hero-body">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            Motion capture has become increasingly important, 
+            not only in computer animation but also in emerging fields 
+            like virtual reality, bioinformatics, and humanoid training. 
+            Capturing outdoor environments offers extended horizon scenes 
+            but introduces challenges with occlusions and obstacles. Recent 
+            approaches using multi-drone systems to capture multiple actor 
+            scenes often fail to account for multi-view consistency and 
+            reasoning across cameras in cluttered environments. Coordinated 
+            motion Capture (CoCap), inspired by Conflict-Based Search 
+            (CBS), addresses this issue by coordinating view planning to 
+            ensure multi-view reasoning during conflicts. In scenarios with 
+            high occlusions and obstacles, where the likelihood of inter-
+            robot collisions increases, CoCap demonstrates performance that 
+            approaches the ideal outcomes of unconstrained planning, out-
+            performing existing sequential planning methods. Additionally, 
+            CoCap offers a single-robot view search approach for real-time 
+            applications in dense environments.
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+</section>
+
 <section class="hero is-light is-big" style="padding-bottom: 120px;">
   <div class="hero-body">
     <div class="container">
