--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                 </a>
               </span>
               <!-- arXiv Link. -->
-              <!-- <span class="link-block">
-                <a href="Link Here"
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2412.20695"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
+              </span>
           </div>
         </div>
       </div>
