--- a/index.html
+++ b/index.html
@@ -272,6 +272,25 @@
 </section>
 
 
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title is-3">BibTeX</h2>
+      <pre><code>
+        @misc{rauniyar2024cocapcoordinatedmotioncapture,
+              title={CoCap: Coordinated motion Capture for multi-actor scenes in outdoor environments}, 
+              author={Aditya Rauniyar and Micah Corah and Sebastian Scherer},
+              year={2024},
+              eprint={2412.20695},
+              archivePrefix={arXiv},
+              primaryClass={cs.RO},
+              url={https://arxiv.org/abs/2412.20695}, 
+        }
+
+      </code></pre>
+    </div>
+</section>
+
+
 
 <footer class="footer">
   <div class="container">
